--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@ctrl/qbittorrent": "^6.1.0",
     "dotenv": "^16.3.1",
+    "mongoose": "^7.5.1",
     "node-telegram-bot-api": "^0.63.0"
   },
   "devDependencies": {
