--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@ctrl/qbittorrent": "^6.1.0",
+    "check-disk-space": "^3.4.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.5.1",
     "ms": "^2.1.3",
