--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
     "@ctrl/qbittorrent": "^6.1.0",
     "check-disk-space": "^3.4.0",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.5.1",
     "node-telegram-bot-api": "^0.63.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.2.4"
   },
   "name": "qbit-tg",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "lint": "eslint . --ext .js --fix",
+    "format": "prettier --write ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "joybiswas007",
+  "license": "MIT",
   "description": ""
 }
